# space

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tools.fish
commands/: index.html
docs/: commands.md  getting-started.md  index.md
getting-started/: index.html
peanuts/: __init__.py  __main__.py  session.py
peanuts/cli/: session.py
search/: search_index.json
space_cli/: Cargo.toml
space_cli/src/: main.rs
space_lib/: Cargo.toml
space_lib/src/: errors.rs  lib.rs  schema.rs  space.rs
src/: cache.py  common.py  fs_utils.rs  main.py  main.rs  schema.py
src/internals/: database.rs  mod.rs  schema.rs
