[tool.poetry]
name = "space"
version = "0.1.0"
description = "A JSON based minimalist database"
authors = ["vidhyk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
